add screenshot to README

--- a/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
+++ b/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
@@ -50,6 +50,9 @@ body {
   height: 80px;
   /* padding-left: 5%; */
 }
+.gRFjMP {
+  margin-left: 5px;
+}
 
 /* .banner {
   background-color: white !important;
