Fix font size for instructions

--- a/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
+++ b/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
@@ -63,6 +63,7 @@
 }
 
 #instructions {
+    font-size: 1.5rem;
     font-style: italic;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
