--- a/apps/dash-manufacture-spc-dashboard/assets/spc-custom-styles.css
+++ b/apps/dash-manufacture-spc-dashboard/assets/spc-custom-styles.css
@@ -77,105 +77,6 @@ body {
   margin: 0px 10px;
 }
 
-/* Tabs
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.custom-tabs {
-  background-color: #161a28;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 14px;
-  height: 18px;
-  cursor: pointer;
-}
-
-#Specs-tab.custom-tab, #Control-chart-tab.custom-tab {
-  background-color: inherit;
-  letter-spacing: 1px;
-  color: inherit;
-  border: #23262E solid 2px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-#Specs-tab.custom-tab--selected, #Control-chart-tab.custom-tab--selected {
-  border-bottom: #91dfd2 solid 5px !important;
-}
-
-.section-banner {
-  color: darkgray;
-  font-size: 1.5rem;
-  background-color: #1d202d;
-  text-align: left;
-  font-weight: normal;
-  padding: 2rem 3rem;
-  border-bottom: darkgray solid 1px;
-}
-
-
-#top-section-container {
-  height: 50rem;
-  flex-direction: row;
-  display: flex;
-  max-width: 100%;
-  /*width: 100%;*/
-}
-
-#metric_header > div {
-  font-weight: bold;
-}
-
-#tabs {
-  margin: 0 0 3rem 0;
-  width: 100%;
-}
-
-
-/* Scalable Container
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.container.scalable {
-  width: 95%;
-  max-width: none;
-}
-
-/* Remove Undo
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-._dash-undo-redo {
-  display: none;
-}
-
-#Diameter_button,
-#Etch1_button,
-#Film-Thickness_button,
-#Etch2_button,
-#Line-Width_button,
-#Overlay_button,
-#Volume_button {
-  padding: 0px 0px;
-  color: #95969A;
-}
-
-.metric-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-
-#Diameter_OOC_graph > div > div,
-#Etch1_OOC_graph > div > div,
-#Film-Thickness_OOC_graph > div > div,
-#Metric4_OOC_graph > div > div,
-#Etch2_OOC_graph > div > div,
-#Line-Width_OOC_graph > div > div,
-#Overlay_OOC_graph > div > div,
-#Volume_OOC_graph > div > div {
-  width: 100%;
-}
-
 /* The Modal (background) */
 .modal {
   display: none; /*Hidden by default */
@@ -222,6 +123,93 @@ body {
   margin-top: 20px;
   color: white;
   border-color: darkgray !important;
+}
+
+/* Tabs
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#tabs {
+  margin: 0 0 3rem 0;
+  width: 100%;
+}
+
+.custom-tabs {
+  background-color: #161a28;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 14px;
+  height: 18px;
+  cursor: pointer;
+}
+
+#Specs-tab.custom-tab, #Control-chart-tab.custom-tab {
+  background-color: inherit;
+  letter-spacing: 1px;
+  color: inherit;
+  border: #23262E solid 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+#Specs-tab.custom-tab--selected, #Control-chart-tab.custom-tab--selected {
+  border-bottom: #91dfd2 solid 5px !important;
+}
+
+.section-banner {
+  color: darkgray;
+  font-size: 1.5rem;
+  background-color: #1d202d;
+  text-align: left;
+  font-weight: normal;
+  padding: 2rem 3rem;
+  border-bottom: darkgray solid 1px;
+}
+
+/* Main Dashboard Tab
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+#top-section-container {
+  height: 50rem;
+  flex-direction: row;
+  display: flex;
+  max-width: 100%;
+  /*width: 100%;*/
+}
+
+#metric_header > div {
+  font-weight: bold;
+}
+
+#Diameter_button,
+#Etch1_button,
+#Film-Thickness_button,
+#Etch2_button,
+#Line-Width_button,
+#Overlay_button,
+#Volume_button {
+  padding: 0px 0px;
+  color: #95969A;
+}
+
+.metric-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+#Diameter_OOC_graph > div > div,
+#Etch1_OOC_graph > div > div,
+#Film-Thickness_OOC_graph > div > div,
+#Metric4_OOC_graph > div > div,
+#Etch2_OOC_graph > div > div,
+#Line-Width_OOC_graph > div > div,
+#Overlay_OOC_graph > div > div,
+#Volume_OOC_graph > div > div {
+  width: 100%;
 }
 
 #stop-button {
@@ -312,7 +300,7 @@ body {
   font-size: 25px;
 }
 
-/* Tab 1 content
+/* Tab1 content
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #set-specs-intro-container {
@@ -327,18 +315,14 @@ body {
 }
 
 #button-div {
-  display:flex;
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
 }
 
 #value-setter-view-btn {
-  margin-left:20px;
+  margin-left: 20px;
 }
-
-/*#value-setter-set-btn {*/
-  /*display: inline-block;*/
-/*}*/
 
 #value-setter-panel {
   line-height: 2;
@@ -349,17 +333,11 @@ body {
   color: darkgray;
   line-height: 1;
   padding: 2rem 0;
-  border-bottom: darkgray solid 1px;
+  border-bottom: 1px solid #4b5460;
 }
 
-#react-select-2--value {
-  background: #2d3038;
-}
-
-
-.output-datatable {
-  margin: 2rem 0rem 2rem 4rem;
-  line-height: 3;
+#value-setter-panel-header > div {
+  text-align: right;
 }
 
 #value-setter-view-btn, #value-setter-set-btn {
@@ -376,7 +354,12 @@ body {
   padding: 1rem 0;
 }
 
-/*Dropdowns */
+.output-datatable {
+  margin: 2rem 0rem 2rem 4rem;
+  line-height: 3;
+}
+
+/*Dropdown*/
 .setting-input {
   width: 100% !important;
   height: 100%;
@@ -400,31 +383,15 @@ body {
   border-color: white transparent transparent !important;
 }
 
-/*view current setup stuff*/
-.dash-header.column-0, .dash-header.column-1 {
-  background-color: #242633 !important;
-  color: darkgray !important;
-  font-family: "Open Sans", sans-serif !important;
-  padding: 0 2rem !important;
-  font-weight: bold;
-}
-
-.dash-cell.column-0, .dash-cell.column-1 {
-  background-color: #242633 !important;
-  color: darkgray !important;
-  font-family: "Open Sans", sans-serif !important;
-  padding: 0 2rem !important;
-}
-
-.dash-cell.column-0, .dash-cell.column-1 {
-  cursor: pointer;
-}
+/*view current setup table*/
 
 .dash-spreadsheet-container .dash-spreadsheet-inner table {
-  --border: #1d202d !important;
-  --accent: #91dfd2 !important;
+  --hover: #92e0d3 !important;
 }
 
+.dash-spreadsheet-container .dash-spreadsheet-inner :not(.cell--selected) tr:hover, .dash-spreadsheet-container tr:hover input :not(.cell--selected) {
+  background-color: var(--hover);
+}
 
 /* Dropdown
 ----------------------------------------------*/
@@ -500,7 +467,7 @@ body {
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-evenly;
-  margin: 2rem 5rem 1rem;
+  margin: 4rem 5rem 1rem;
 }
 
 #metric-select-menu {
@@ -653,4 +620,20 @@ body {
   overflow-y: scroll;
   width: 100%;
   height: 33rem;
+}
+
+/*
+  ##Device = Most of the Smartphones Mobiles / ipad (Portrait)
+  */
+@media only screen and (max-width: 750px) {
+
+
+}
+
+
+/* Scalable Container
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.container.scalable {
+  width: 95%;
+  max-width: none;
 }
